--- a/src/main/webapp/submission.xhtml
+++ b/src/main/webapp/submission.xhtml
@@ -12,9 +12,9 @@
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
-  
+
        http://www.apache.org/licenses/LICENSE-2.0
-  
+
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -22,23 +22,19 @@
   limitations under the License.
   #L%
   -->
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-xmlns:f="http://java.sun.com/jsf/core"
-xmlns:h="http://java.sun.com/jsf/html"
-xmlns:ui="http://java.sun.com/jsf/facelets"
-xmlns:a4j="http://richfaces.org/a4j"
-xmlns:rich="http://richfaces.org/rich"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://java.sun.com/jsf/core"
+xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets"
+xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich"
 xmlns:p="http://primefaces.org/ui">
  <META HTTP-EQUIV="refresh" CONTENT="15" />
  <h:body>
   <!-- main template defining header, footer and content -->
   <ui:composition template="/templates/common/commonLayout.xhtml">
-  <ui:define name="header_text">
+   <ui:define name="header_text">
     <span>#{txt['HEADER.LINK4']}</span>
-  </ui:define>
+   </ui:define>
    <ui:define name="content">
     <!-- -->
     <script type="text/javascript">
@@ -47,38 +43,28 @@ xmlns:p="http://primefaces.org/ui">
     <!-- -->
     jQuery(".tipsy").remove();
     <!-- -->
-    jQuery( "th.fn_class").tipsy({fallback:
-    "#{txt['FN']}", gravity: 's' });
+    jQuery( "th.fn_class").tipsy({fallback: "#{txt['FN']}", gravity: 's' });
     <!-- -->
-    jQuery( ".scenario_class" ).tipsy({fallback:
-    "#{txt['ASSERTION.SC']}", gravity: 'w' });
+    jQuery( ".scenario_class" ).tipsy({fallback: "#{txt['ASSERTION.SC']}", gravity: 'w' });
     <!-- -->
-    jQuery( ".exercise_group_class" ).tipsy({fallback:
-    "#{txt['ASSERTION.EXG']}", gravity: 'w' });
+    jQuery( ".exercise_group_class" ).tipsy({fallback: "#{txt['ASSERTION.EXG']}", gravity: 'w' });
     <!-- -->
-    jQuery( ".exercise_class" ).tipsy({fallback:
-    "#{txt['ASSERTION.EX']}", gravity: 'w' });
+    jQuery( ".exercise_class" ).tipsy({fallback: "#{txt['ASSERTION.EX']}", gravity: 'w' });
     <!-- -->
-    jQuery( ".user_class" ).tipsy({fallback:
-    "#{txt['ASSERTION.USER']}", gravity: 'w' });
+    jQuery( ".user_class" ).tipsy({fallback: "#{txt['ASSERTION.USER']}", gravity: 'w' });
     <!-- -->
-    jQuery( "#form\\:exID_input" ).tipsy({fallback:
-    "#{txt['ASSERTION.FILTER7']}", gravity: 'n' });
+    jQuery( "#form\\:exID_input" ).tipsy({fallback: "#{txt['ASSERTION.FILTER7']}", gravity: 'n' });
     <!-- -->
-    jQuery( ".show_details" ).tipsy({fallback:
-    "#{txt['ASSERTION.EDIT']}. #{txt['ASSERTION.TAB']}", gravity: 'e' });
+    jQuery( ".show_details" ).tipsy({fallback: "#{txt['ASSERTION.EDIT']}. #{txt['ASSERTION.TAB']}", gravity:
+    'e' });
     <!-- -->
-    jQuery( ".downloader" ).tipsy({fallback:
-    "#{txt['ASSERTION.EXPORT_RESULTS']}", gravity: 'e' });
+    jQuery( ".downloader" ).tipsy({fallback: "#{txt['ASSERTION.EXPORT_RESULTS']}", gravity: 'e' });
     <!-- -->
-    jQuery( ".recalc2" ).tipsy({fallback:
-    "#{txt['ASSERTION.ASK_RECALC_TITLE']}", gravity: 'e' });
+    jQuery( ".recalc2" ).tipsy({fallback: "#{txt['ASSERTION.ASK_RECALC_TITLE']}", gravity: 'e' });
     <!-- -->
-    jQuery( ".remove_rating" ).tipsy({fallback:
-    "#{txt['ASSERTION.DELETE']}", gravity: 'e' });
+    jQuery( ".remove_rating" ).tipsy({fallback: "#{txt['ASSERTION.DELETE']}", gravity: 'e' });
     <!-- -->
-    jQuery( ".unknown_solution" ).tipsy({fallback:
-    "#{txt['ASSERTION.NEW_SOLUTION']}", gravity: 'n' }); }
+    jQuery( ".unknown_solution" ).tipsy({fallback: "#{txt['ASSERTION.NEW_SOLUTION']}", gravity: 'n' }); }
     <!-- -->
     jQuery(document).ready(function() {
     <!-- -->
@@ -92,80 +78,59 @@ xmlns:p="http://primefaces.org/ui">
     <!-- --></script>
     <p:outputPanel style="text-align:center">
      <h:form id="form">
-
       <p:growl id="messages" showDetail="true" life="6000" />
-      <p:dialog modal="true" widgetVar="statusDialog" header="Status"
-      draggable="false" closable="true" resizable="false">
-      #{txt['ASSERTION.DIALOG_LOADING']}
+      <p:dialog modal="true" widgetVar="statusDialog" header="Status" draggable="false" closable="true"
+      resizable="false">#{txt['ASSERTION.DIALOG_LOADING']}
       <br />
       <br />
       <p:graphicImage value="/resources/img/#{config['IMG.LOAD']}" />
       <br /></p:dialog>
       <h:panelGrid columns="5" cellpadding="2" id="filter_fields">
        <!-- -->
-       <p:autoComplete id="scenarioID" value="#{sub.scenarioID}"
-       dropdown="true" forceSelection="true" maxResults="25"
-       completeMethod="#{scenario_names.complete}"
-       placeholder="#{txt['SCENARIO']}" cache="true">
-        <p:ajax event="itemSelect"
-        listener="#{sub.handleScenarioSelect}"
-        update="groupID scenarioID" />
+       <p:autoComplete id="scenarioID" value="#{sub.scenarioID}" dropdown="true" forceSelection="true"
+       maxResults="25" completeMethod="#{scenario_names.complete}" placeholder="#{txt['SCENARIO']}"
+       cache="true">
+        <p:ajax event="itemSelect" listener="#{sub.handleScenarioSelect}" update="groupID scenarioID" />
        </p:autoComplete>
        <!-- -->
-       <p:autoComplete id="groupID" value="#{sub.groupID}"
-       cache="true" dropdown="true" forceSelection="true"
-       maxResults="25"
-       completeMethod="#{group_names.scenarioInit(sub.scenarioID).complete}"
+       <p:autoComplete id="groupID" value="#{sub.groupID}" cache="true" dropdown="true" forceSelection="true"
+       maxResults="25" completeMethod="#{group_names.scenarioInit(sub.scenarioID).complete}"
        placeholder="#{txt['EXERCISE_GROUP']}">
-        <p:ajax event="itemSelect"
-        listener="#{sub.handleGroupSelect}" update="exID groupID" />
+        <p:ajax event="itemSelect" listener="#{sub.handleGroupSelect}" update="exID groupID" />
        </p:autoComplete>
        <!-- -->
-       <p:autoComplete id="exID" value="#{sub.exID}" cache="true"
-       dropdown="true" placeholder="#{txt['EXERCISE']}"
-       forceSelection="true" maxResults="25"
+       <p:autoComplete id="exID" value="#{sub.exID}" cache="true" dropdown="true"
+       placeholder="#{txt['EXERCISE']}" forceSelection="true" maxResults="25"
        completeMethod="#{exercise_names.groupInit(sub.groupID).complete}">
-        <p:ajax event="itemSelect"
-        listener="#{sub.handleExerciseSelect}"
-        update="userID exID" />
+        <p:ajax event="itemSelect" listener="#{sub.handleExerciseSelect}" update="userID exID" />
        </p:autoComplete>
        <!-- -->
-       <p:autoComplete id="userID" value="#{sub.userID}" cache="true"
-       placeholder="#{txt['USERID']}" forceSelection="true"
-       maxResults="15" dropdown="true"
+       <p:autoComplete id="userID" value="#{sub.userID}" cache="true" placeholder="#{txt['USERID']}"
+       forceSelection="true" maxResults="15" dropdown="true"
        completeMethod="#{user_names.exerciseInit(sub.exID).complete}">
-
-        <p:ajax event="itemSelect" listener="#{sub.handleUserSelect}"
-        update="userID" />
+        <p:ajax event="itemSelect" listener="#{sub.handleUserSelect}" update="userID" />
        </p:autoComplete>
        <!-- -->
-       <p:commandButton value="#{txt['ASSERTION.FILTER0']}"
-       update="treetable messages error_display"
-	   actionListener="#{sub.reloadTree()}" oncomplete="context_tooltip()" />
+       <p:commandButton value="#{txt['ASSERTION.FILTER0']}" update="treetable messages error_display"
+       actionListener="#{sub.reloadTree()}" oncomplete="context_tooltip()" />
       </h:panelGrid>
-      <h:outputText id="error_display" value="#{sub.errorText}"
-      style="color:red" />
+      <h:outputText id="error_display" value="#{sub.errorText}" style="color:red" />
       <br />
       <!-- -->
-      <p:treeTable id="treetable" value="#{sub.root}" var="row"
-      resizableColumns="true"
-	  emptyMessage="#{txt['ASSERTION.FILTER6']}">
-
+      <p:treeTable id="treetable" value="#{sub.root}" var="row" resizableColumns="true"
+      emptyMessage="#{txt['ASSERTION.FILTER6']}">
        <f:facet name="header">#{txt['ASSERTION']}</f:facet>
        <p:ajax event="expand" oncomplete="context_tooltip()" />
        <p:column style="width:20%">
-        <f:facet name="header">
-        #{txt['ASSERTION.SUBMISSIONS']}</f:facet>
-        <h:outputText value="#{row.text}"
-        class="#{row.getStyleClass()}" style="cursor:default" />
+        <f:facet name="header">#{txt['ASSERTION.SUBMISSIONS']}</f:facet>
+        <h:outputText value="#{row.text}" class="#{row.getStyleClass()}" style="cursor:default" />
        </p:column>
        <p:column style="width:48%">
         <!-- (row.isExercise ? row.exercise.solutionQueries : '') -->
         <f:facet name="header">#{txt['ASSERTION.QUERY']}</f:facet>
         <h:outputText value="#{row.isEntry ? row.userEntry.userQuery :
                            (row.isExercise ? row.getExerciseText() : '')}"
-        style="white-space:normal;#{sub.getStyle(row)}"
-        class="#{sub.getStyleClass(row)}" />
+style="white-space:normal;#{sub.getStyle(row)}" class="#{sub.getStyleClass(row)}" />
        </p:column>
        <p:column style="width:10%; text-align:center;">
         <f:facet name="header">#{txt['ASSERTION.POINTS']}</f:facet>
@@ -174,68 +139,48 @@ xmlns:p="http://primefaces.org/ui">
        </p:column>
        <p:column style="width:17%">
         <f:facet name="header">#{txt['ASSERTION.DATE']}</f:facet>
-        <h:outputText value="#{row.isEntry ? row.getEntryDate() : ''}"
-        style="white-space:normal;">
+        <h:outputText value="#{row.isEntry ? row.getEntryDate() : ''}" style="white-space:normal;">
         </h:outputText>
        </p:column>
        <p:column style="width:6%;text-align:center;" styleClass="fn_class">
         <f:facet name="header">Fn</f:facet>
-        <p:outputPanel rendered="#{row.isEntry}"
-        style="margin-bottom:3px">
-         <p:commandButton title="#{txt['ASSERTION.EDIT']}. #{txt['ASSERTION.TAB']}"
-         ajax="false" icon="ui-icon-search" styleClass="show_details"
+        <p:outputPanel rendered="#{row.isEntry}" style="margin-bottom:3px">
+         <p:commandButton title="#{txt['ASSERTION.EDIT']}. #{txt['ASSERTION.TAB']}" ajax="false"
+         icon="ui-icon-search" styleClass="show_details"
          onclick="window.open('#{moveTo.editSubmission(row)}');return false"
-         action="#{moveTo.editSubmission(row)}" target="_blank">
-         </p:commandButton>
+         action="#{moveTo.editSubmission(row)}" target="_blank"></p:commandButton>
         </p:outputPanel>
         <p:confirmDialog message="#{txt['ASSERTION.ASK_DELETE']}"
-        header="#{txt['ASSERTION.ASK_DELETE_TITLE']}" widgetVar="del"
-        severity="alert">
-         <p:commandButton value="#{txt['ASSERTION.DELETE2']}"
-		 onclick="del.hide()" oncomplete="context_tooltip()"
-         styleClass="ui-confirmdialog-yes confirmbutton"
-         actionListener="#{sub.delete()}" update="treetable"
-         style="padding: 0px 5px 0px 5px !important" />
-         <p:commandButton value="#{txt['ASSERTION.ABORT']}"
-         styleClass="ui-confirmdialog-no confirmbutton"
-         style="padding: 0px 5px 0px 5px !important"
-         onclick="del.hide()" />
+        header="#{txt['ASSERTION.ASK_DELETE_TITLE']}" widgetVar="del" severity="alert">
+         <p:commandButton value="#{txt['ASSERTION.DELETE2']}" onclick="del.hide()"
+         oncomplete="context_tooltip()" styleClass="ui-confirmdialog-yes confirmbutton"
+         actionListener="#{sub.delete()}" update="treetable" style="padding: 0px 5px 0px 5px !important" />
+         <p:commandButton value="#{txt['ASSERTION.ABORT']}" styleClass="ui-confirmdialog-no confirmbutton"
+         style="padding: 0px 5px 0px 5px !important" onclick="del.hide()" />
         </p:confirmDialog>
         <p:confirmDialog message="#{txt['ASSERTION.ASK_RECALC']}"
-        header="#{txt['ASSERTION.ASK_RECALC_TITLE2']}"
-        widgetVar="recalc" severity="alert">
-         <p:commandButton value="#{txt['ASSERTION.ASK_RECALC_TITLE2']}"
-		 onclick="recalc.hide(); start()" oncomplete="stop(); context_tooltip()"
-         styleClass="ui-confirmdialog-yes confirmbutton"
-         actionListener="#{sub.forceExerciseAssertion()}"
-         update="treetable"
+        header="#{txt['ASSERTION.ASK_RECALC_TITLE2']}" widgetVar="recalc" severity="alert">
+         <p:commandButton value="#{txt['ASSERTION.ASK_RECALC_TITLE2']}" onclick="recalc.hide(); start()"
+         oncomplete="stop(); context_tooltip()" styleClass="ui-confirmdialog-yes confirmbutton"
+         actionListener="#{sub.forceExerciseAssertion()}" update="treetable"
          style="padding: 0px 5px 0px 5px !important" />
-         <p:commandButton value="#{txt['ASSERTION.ABORT']}"
-         styleClass="ui-confirmdialog-no confirmbutton"
-         onclick="recalc.hide()"
-         style="padding: 0px 5px 0px 5px !important" />
+         <p:commandButton value="#{txt['ASSERTION.ABORT']}" styleClass="ui-confirmdialog-no confirmbutton"
+         onclick="recalc.hide()" style="padding: 0px 5px 0px 5px !important" />
         </p:confirmDialog>
-        <p:commandButton rendered="#{row.isExGroup}"
-        title="#{txt['ASSERTION.EXPORT_RESULTS']}"
-        styleClass="downloader"
-        style="background-color:#E5E8FF !important" ajax="false"
-        icon="ui-icon-document"
-        onclick="PrimeFaces.monitorDownload(start, stop)">
+        <p:commandButton rendered="#{row.isExGroup}" title="#{txt['ASSERTION.EXPORT_RESULTS']}"
+        styleClass="downloader" style="background-color:#E5E8FF !important" ajax="false"
+        icon="ui-icon-document" onclick="PrimeFaces.monitorDownload(start, stop)">
          <p:fileDownload value="#{sub.getExport(row.exGroup)}" />
         </p:commandButton>
-        <p:commandButton rendered="#{row.isExercise}"
-        styleClass="recalc2" ajax="true" icon="ui-icon-calculator"
-        onclick="recalc.show()"
-        actionListener="#{sub.setRecalcRow(row)}" />
-        <p:commandButton rendered="#{row.canBeRemoved}"
-        styleClass="remove_rating" ajax="true" icon="ui-icon-trash"
-        onclick="del.show()"
-        actionListener="#{sub.setDelRow(row)}" />
+        <p:commandButton rendered="#{row.isExercise}" styleClass="recalc2" ajax="true"
+        icon="ui-icon-calculator" onclick="recalc.show()" actionListener="#{sub.setRecalcRow(row)}" />
+        <p:commandButton rendered="#{row.canBeRemoved}" styleClass="remove_rating" ajax="true"
+        icon="ui-icon-trash" onclick="del.show()" actionListener="#{sub.setDelRow(row)}" />
        </p:column>
       </p:treeTable>
      </h:form>
      <h:outputText escape="false" style="display:block;
-        font-size:15px;font-weight:bold;margin-top:20px" value="#{txt['ASSERTION.FILTER4']}"/>
+        font-size:15px;font-weight:bold;margin-top:20px" value="#{txt['ASSERTION.FILTER4']}" />
     </p:outputPanel>
    </ui:define>
   </ui:composition>
